refactor: fix code quality issues from simplify review
- Add atomic increment/decrement methods to ActivityRepository to fix race conditions
- Consolidate enrichWithClubName methods to reduce code duplication
- Add error message constants in ActivityApplicationService
- Add validateAndParseToken method to JwtUtil to avoid triple JWT parsing
- Add constants for magic strings in JwtAuthenticationFilter
- Optimize participant count updates with database-level atomic operations