@@ -31,6 +31,16 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class ActivityApplicationService {
 
+    private static final String ERR_ACTIVITY_NOT_FOUND = "Activity not found with id: %d";
+    private static final String ERR_USER_NOT_FOUND = "User not found with id: %d";
+    private static final String ERR_CLUB_NOT_FOUND = "Club not found with id: %d";
+    private static final String ERR_REGISTRATION_NOT_FOUND = "Registration not found for this activity";
+    private static final String ERR_ALREADY_REGISTERED = "User already registered for this activity";
+    private static final String ERR_ONLY_DRAFT_EDITABLE = "Only DRAFT activities can be edited. Current status: %s";
+    private static final String ERR_ONLY_DRAFT_DELETABLE = "Only DRAFT activities can be deleted. Current status: %s";
+    private static final String ERR_ONLY_REGISTERED_CAN_CANCEL = "Only REGISTERED participants can cancel. Current status: %s";
+    private static final String ERR_CANNOT_REGISTER = "Cannot register for this activity. Status: %s, Capacity: %s, Current: %s";
+
     private final ActivityRepository activityRepository;
     private final ActivityParticipantRepository participantRepository;
     private final ClubRepository clubRepository;
@@ -62,20 +72,16 @@ public class ActivityApplicationService {
 
     @Transactional(readOnly = true)
     public ActivityDto getActivity(Long id) {
-        Activity activity = activityRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Activity not found with id: " + id, HttpStatus.NOT_FOUND));
+        Activity activity = findActivityById(id);
         ActivityDto dto = activityMapper.toDto(activity);
         return enrichWithClubName(dto);
     }
 
     @Transactional
     public ActivityDto createActivity(Long userId, ActivityCreateRequest request) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new BusinessException("User not found with id: " + userId, HttpStatus.NOT_FOUND));
-
+        validateUserExists(userId);
         if (request.clubId() != null) {
-            Club club = clubRepository.findById(request.clubId())
-                    .orElseThrow(() -> new BusinessException("Club not found with id: " + request.clubId(), HttpStatus.NOT_FOUND));
+            validateClubExists(request.clubId());
         }
 
         Activity activity = activityMapper.toEntity(request);
@@ -90,17 +96,15 @@ public class ActivityApplicationService {
 
     @Transactional
     public ActivityDto updateActivity(Long id, ActivityCreateRequest request) {
-        Activity activity = activityRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Activity not found with id: " + id, HttpStatus.NOT_FOUND));
+        Activity activity = findActivityById(id);
 
         if (activity.getStatus() != Activity.ActivityStatus.DRAFT) {
-            throw new BusinessException("Only DRAFT activities can be edited. Current status: " + activity.getStatus(),
+            throw new BusinessException(String.format(ERR_ONLY_DRAFT_EDITABLE, activity.getStatus()),
                     HttpStatus.BAD_REQUEST);
         }
 
         if (request.clubId() != null) {
-            Club club = clubRepository.findById(request.clubId())
-                    .orElseThrow(() -> new BusinessException("Club not found with id: " + request.clubId(), HttpStatus.NOT_FOUND));
+            validateClubExists(request.clubId());
         }
 
         activity.setTitle(request.title());
@@ -121,11 +125,10 @@ public class ActivityApplicationService {
 
     @Transactional
     public void deleteActivity(Long id) {
-        Activity activity = activityRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Activity not found with id: " + id, HttpStatus.NOT_FOUND));
+        Activity activity = findActivityById(id);
 
         if (activity.getStatus() != Activity.ActivityStatus.DRAFT) {
-            throw new BusinessException("Only DRAFT activities can be deleted. Current status: " + activity.getStatus(),
+            throw new BusinessException(String.format(ERR_ONLY_DRAFT_DELETABLE, activity.getStatus()),
                     HttpStatus.BAD_REQUEST);
         }
 
@@ -135,29 +138,24 @@ public class ActivityApplicationService {
 
     @Transactional
     public void submitForApproval(Long id) {
-        Activity activity = activityRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Activity not found with id: " + id, HttpStatus.NOT_FOUND));
-
+        Activity activity = findActivityById(id);
         activity.submitForApproval();
         activityRepository.save(activity);
     }
 
     @Transactional
     public void registerForActivity(Long activityId, Long userId) {
-        Activity activity = activityRepository.findById(activityId)
-                .orElseThrow(() -> new BusinessException("Activity not found with id: " + activityId, HttpStatus.NOT_FOUND));
-
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new BusinessException("User not found with id: " + userId, HttpStatus.NOT_FOUND));
+        Activity activity = findActivityById(activityId);
+        validateUserExists(userId);
 
         if (!activity.canRegister()) {
-            throw new BusinessException("Cannot register for this activity. Status: " + activity.getStatus() +
-                    ", Capacity: " + activity.getCapacity() + ", Current: " + activity.getCurrentParticipants(),
+            throw new BusinessException(String.format(ERR_CANNOT_REGISTER,
+                    activity.getStatus(), activity.getCapacity(), activity.getCurrentParticipants()),
                     HttpStatus.BAD_REQUEST);
         }
 
         if (participantRepository.existsByActivityIdAndUserId(activityId, userId)) {
-            throw new BusinessException("User already registered for this activity", HttpStatus.BAD_REQUEST);
+            throw new BusinessException(ERR_ALREADY_REGISTERED, HttpStatus.BAD_REQUEST);
         }
 
         ActivityParticipant participant = ActivityParticipant.builder()
@@ -169,37 +167,34 @@ public class ActivityApplicationService {
 
         participantRepository.save(participant);
 
-        activity.setCurrentParticipants(activity.getCurrentParticipants() + 1);
-        activityRepository.save(activity);
+        int updated = activityRepository.incrementParticipants(activityId);
+        if (updated == 0) {
+            throw new BusinessException("Activity capacity reached", HttpStatus.BAD_REQUEST);
+        }
     }
 
     @Transactional
     public void cancelRegistration(Long activityId, Long userId) {
-        Activity activity = activityRepository.findById(activityId)
-                .orElseThrow(() -> new BusinessException("Activity not found with id: " + activityId, HttpStatus.NOT_FOUND));
-
+        Activity activity = findActivityById(activityId);
         ActivityParticipant participant = participantRepository.findByActivityIdAndUserId(activityId, userId)
-                .orElseThrow(() -> new BusinessException("Registration not found for this activity", HttpStatus.NOT_FOUND));
+                .orElseThrow(() -> new BusinessException(ERR_REGISTRATION_NOT_FOUND, HttpStatus.NOT_FOUND));
 
         if (participant.getStatus() != ActivityParticipant.ParticipationStatus.REGISTERED) {
-            throw new BusinessException("Only REGISTERED participants can cancel. Current status: " + participant.getStatus(),
+            throw new BusinessException(String.format(ERR_ONLY_REGISTERED_CAN_CANCEL, participant.getStatus()),
                     HttpStatus.BAD_REQUEST);
         }
 
         participant.cancel();
         participantRepository.save(participant);
 
-        activity.setCurrentParticipants(Math.max(0, activity.getCurrentParticipants() - 1));
-        activityRepository.save(activity);
+        activityRepository.decrementParticipants(activityId);
     }
 
     @Transactional
     public void checkIn(Long activityId, Long userId) {
-        Activity activity = activityRepository.findById(activityId)
-                .orElseThrow(() -> new BusinessException("Activity not found with id: " + activityId, HttpStatus.NOT_FOUND));
-
+        findActivityById(activityId);
         ActivityParticipant participant = participantRepository.findByActivityIdAndUserId(activityId, userId)
-                .orElseThrow(() -> new BusinessException("Registration not found for this activity", HttpStatus.NOT_FOUND));
+                .orElseThrow(() -> new BusinessException(ERR_REGISTRATION_NOT_FOUND, HttpStatus.NOT_FOUND));
 
         participant.checkIn();
         participantRepository.save(participant);
@@ -207,70 +202,53 @@ public class ActivityApplicationService {
 
     @Transactional(readOnly = true)
     public List<ActivityParticipantDto> listParticipants(Long activityId) {
-        Activity activity = activityRepository.findById(activityId)
-                .orElseThrow(() -> new BusinessException("Activity not found with id: " + activityId, HttpStatus.NOT_FOUND));
-
+        findActivityById(activityId);
         List<ActivityParticipant> participants = participantRepository.findByActivityId(activityId);
 
-        Set<Long> userIds = participants.stream()
-                .map(ActivityParticipant::getUserId)
-                .collect(Collectors.toSet());
-
-        Map<Long, User> userMap = userRepository.findAllById(userIds).stream()
-                .collect(Collectors.toMap(User::getId, Function.identity()));
+        Map<Long, User> userMap = userRepository.findAllById(
+                participants.stream().map(ActivityParticipant::getUserId).toList()
+        ).stream().collect(Collectors.toMap(User::getId, Function.identity()));
 
         return participants.stream()
                 .map(p -> activityMapper.toParticipantDto(p, userMap.get(p.getUserId())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public List<ActivityDto> listMyActivities(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new BusinessException("User not found with id: " + userId, HttpStatus.NOT_FOUND));
-
+        validateUserExists(userId);
         List<ActivityParticipant> registrations = participantRepository.findByUserId(userId);
 
-        Set<Long> activityIds = registrations.stream()
+        List<Long> activityIds = registrations.stream()
                 .map(ActivityParticipant::getActivityId)
-                .collect(Collectors.toSet());
+                .toList();
 
         List<Activity> activities = activityRepository.findAllById(activityIds);
-
         return enrichWithClubName(activities);
     }
 
+    private Activity findActivityById(Long id) {
+        return activityRepository.findById(id)
+                .orElseThrow(() -> new BusinessException(String.format(ERR_ACTIVITY_NOT_FOUND, id), HttpStatus.NOT_FOUND));
+    }
+
+    private void validateUserExists(Long userId) {
+        if (!userRepository.existsById(userId)) {
+            throw new BusinessException(String.format(ERR_USER_NOT_FOUND, userId), HttpStatus.NOT_FOUND);
+        }
+    }
+
+    private void validateClubExists(Long clubId) {
+        if (!clubRepository.existsById(clubId)) {
+            throw new BusinessException(String.format(ERR_CLUB_NOT_FOUND, clubId), HttpStatus.NOT_FOUND);
+        }
+    }
+
     private Page<ActivityDto> enrichWithClubName(Page<Activity> activities) {
-        Set<Long> clubIds = activities.getContent().stream()
-                .map(Activity::getClubId)
-                .filter(id -> id != null)
-                .collect(Collectors.toSet());
-
-        Map<Long, String> clubNameMap = clubRepository.findAllById(clubIds).stream()
-                .collect(Collectors.toMap(Club::getId, Club::getName));
-
-        return activities.map(activity -> {
-            ActivityDto dto = activityMapper.toDto(activity);
-            return new ActivityDto(
-                    dto.id(),
-                    dto.title(),
-                    dto.description(),
-                    dto.activityType(),
-                    dto.status(),
-                    dto.startTime(),
-                    dto.endTime(),
-                    dto.location(),
-                    dto.capacity(),
-                    dto.currentParticipants(),
-                    dto.clubId(),
-                    clubNameMap.getOrDefault(dto.clubId(), null),
-                    dto.createdBy(),
-                    dto.coverImageUrl(),
-                    dto.budget(),
-                    dto.approvalStatus(),
-                    dto.createdAt()
-            );
-        });
+        Map<Long, String> clubNameMap = getClubNameMap(
+                activities.getContent().stream().map(Activity::getClubId).filter(id -> id != null).toList()
+        );
+        return activities.map(activity -> enrichDtoWithClubName(activityMapper.toDto(activity), clubNameMap));
     }
 
     private ActivityDto enrichWithClubName(ActivityDto dto) {
@@ -280,6 +258,31 @@ public class ActivityApplicationService {
         String clubName = clubRepository.findById(dto.clubId())
                 .map(Club::getName)
                 .orElse(null);
+        return copyWithClubName(dto, clubName);
+    }
+
+    private List<ActivityDto> enrichWithClubName(List<Activity> activities) {
+        Map<Long, String> clubNameMap = getClubNameMap(
+                activities.stream().map(Activity::getClubId).filter(id -> id != null).toList()
+        );
+        return activities.stream()
+                .map(activity -> enrichDtoWithClubName(activityMapper.toDto(activity), clubNameMap))
+                .toList();
+    }
+
+    private Map<Long, String> getClubNameMap(List<Long> clubIds) {
+        if (clubIds.isEmpty()) {
+            return Map.of();
+        }
+        return clubRepository.findAllById(clubIds).stream()
+                .collect(Collectors.toMap(Club::getId, Club::getName));
+    }
+
+    private ActivityDto enrichDtoWithClubName(ActivityDto dto, Map<Long, String> clubNameMap) {
+        return copyWithClubName(dto, clubNameMap.getOrDefault(dto.clubId(), null));
+    }
+
+    private ActivityDto copyWithClubName(ActivityDto dto, String clubName) {
         return new ActivityDto(
                 dto.id(),
                 dto.title(),
@@ -299,40 +302,5 @@ public class ActivityApplicationService {
                 dto.approvalStatus(),
                 dto.createdAt()
         );
-    }
-
-    private List<ActivityDto> enrichWithClubName(List<Activity> activities) {
-        Set<Long> clubIds = activities.stream()
-                .map(Activity::getClubId)
-                .filter(id -> id != null)
-                .collect(Collectors.toSet());
-
-        Map<Long, String> clubNameMap = clubRepository.findAllById(clubIds).stream()
-                .collect(Collectors.toMap(Club::getId, Club::getName));
-
-        return activities.stream()
-                .map(activity -> {
-                    ActivityDto dto = activityMapper.toDto(activity);
-                    return new ActivityDto(
-                            dto.id(),
-                            dto.title(),
-                            dto.description(),
-                            dto.activityType(),
-                            dto.status(),
-                            dto.startTime(),
-                            dto.endTime(),
-                            dto.location(),
-                            dto.capacity(),
-                            dto.currentParticipants(),
-                            dto.clubId(),
-                            clubNameMap.getOrDefault(dto.clubId(), null),
-                            dto.createdBy(),
-                            dto.coverImageUrl(),
-                            dto.budget(),
-                            dto.approvalStatus(),
-                            dto.createdAt()
-                    );
-                })
-                .collect(Collectors.toList());
     }
 }
